<resources>
    <string name="app_name">IotSdkDemo</string>
    <string name="countryCode">国家码</string>
    <string name="password">密码</string>
    <string name="forgetPwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="emailPhone">邮箱/手机</string>
    <string name="register">注册</string>
    <string name="veryCode">验证码</string>
    <string name="getVersionCode">获取验证码</string>
    <string name="inputErrorHint">请输入正确内容</string>
    <string name="loginSuccess">登陆成功</string>
    <string name="registerSuccess">注册成功</string>
    <string name="getVerCodeSuccess">获取验证码成功</string>
    <string name="exitLogin">退出登录</string>
    <string name="userInfo">用户信息</string>
    <string name="resetSuccess">重置密码成功</string>
    <string name="resetPwd">重置密码</string>
    <string name="account">用户名：</string>
    <string name="email">邮箱：</string>
    <string name="phone">手机：</string>
    <string name="registerPlace">注册地：</string>
    <string name="lastLoginDevice">最后登录设备：</string>
    <string name="lastLoginTime">最后登录时间：</string>
    <string name="registerDate">账号注册时间：</string>
    <string name="gender">性别：</string>
    <string name="birth">生日：</string>
    <string name="familyList">家庭列表</string>
    <string name="currentFamily">当前家庭</string>
    <string name="addFamily">添加家庭</string>
    <string name="familyDetail">家庭详情</string>
    <string name="selectFamily">选择家庭</string>
    <string name="familyName">家庭名称</string>
    <string name="ezvizSmart">萤石智能</string>
    <string name="familyManager">家庭管理</string>

    <string name="messageList">消息列表</string>
    <string name="personalCenter">个人中心</string>
    <string name="messageTitle">消息</string>
    <string name="alarmMessage">告警消息</string>
    <string name="noticeMessage">通知消息</string>
    <string name="messageListNull">暂无消息</string>
    <string name="addSuccess">添加成功</string>
    <string name="operateFail">操作失败</string>
    <string name="groupManager">房间管理</string>
    <string name="addGroup">添加房间</string>
    <string name="groupList">房间列表</string>

    <string name="mine_firstPage_message_center">消息中心</string>
    <string name="mine_firstPage_more_service">更多服务</string>
    <string name="mine_personalInfo_cloudStorageService">云储存服务</string>
    <string name="mine_firstPage_common_settings">"通用设置"</string>
    <string name="mine_firstPage_common_feedback">"问题反馈"</string>
    <string name="mine_firstPage_about_app">"关于APP"</string>

    <string name="selectGroup">选择房间</string>
    <string name="deviceList">设备列表</string>
    <string name="deviceDetail">设备详情</string>
    <string name="deviceManager">设备管理</string>
    <string name="selectFamilyHint">请选择家庭</string>
    <string name="selectFamilyOrRoomHint">请选择家庭和房间</string>
    <string name="memoryInfo">成员信息</string>
    <string name="control">控制 : </string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="clickSend">点击下发</string>
    <string name="familyCreator">家庭主人</string>
    <string name="roomNum">房间数量</string>
    <string name="wifiManager">配网管理</string>
    <string name="wifiModule">配网模块</string>
    <string name="wifiPage">连接到设备</string>
    <string name="indicatorStatus">AP配网</string>
    <string name="deviceWifiList">设备wifi列表</string>
    <string name="wifiConfigFail">配网失败</string>
    <string name="configuring">正在配置</string>
    <string name="wifiConfigSuccess">配置成功</string>
    <string name="inputUserName">请输入用户名</string>
    <string name="userNameFormat">请输入用户名</string>
    <string name="inputEmail">请输入邮箱号</string>
    <string name="emailFormat">请输入邮箱</string>
    <string name="inputPhone">请输入手机号</string>
    <string name="phoneFormat">请输入手机号</string>
    <string name="inputGender">请输入性别</string>
    <string name="genderFormat">性别格式为"男"或"女"</string>
    <string name="inputBirth">请输入出生日期</string>
    <string name="birthFormat">日期格式为"yyyy-mm-dd"</string>
    <string name="accountSecurity">账户安全</string>
    <string name="terminalBind">终端绑定</string>
    <string name="terminalManage">终端管理</string>
    <string name="terminalStartStatus">开启</string>
    <string name="terminalCloseStatus">关闭</string>
    <string name="currentTerminalNum">当前终端数为0个</string>
    <string name="terminalDeleteTitle">终端删除</string>
    <string name="modifyPassword">修改密码</string>
    <string name="wifiConfigTip">提示：选择对应的配网方式，然后跳转到wifi设置界面，连接设备wifi热点</string>
    <string name="inputVerifyCodeTitle">输入短信验证码</string>
    <string name="inputVerifyCodeTip">请输入以下账号的验证码：</string>
    <string name="inputNewAccount">输入新账号</string>
    <string name="inputNewAccountVerifyCode">输入新账号验证码</string>
    <string name="configWifiDetailTitle">配网详情页面</string>
    <string name="inputVerifyCode">输入验证码</string>
    <string name="connectDeviceWifi">连接设备WiFi</string>

    <string name="inviteNum">邀请成员</string>
    <string name="deleteFamily">删除家庭</string>
    <string name="addFamilyMember">添加家庭成员</string>
    <string name="inviteSuccess">邀请发送成功</string>
    <string name="deleteSuccess">删除成功</string>
    <string name="exitFamily">退出家庭</string>
    <string name="deleteGroup">删除房间</string>
    <string name="removeMember">移除成员</string>
    <string name="modifyFamilyName">修改家庭名称</string>
    <string name="modifyGroupName">修改房间名称</string>
    <string name="deviceInRoom">房间下的设备</string>
    <string name="finalRoomNotDelete">最后一个房间不可以删除</string>
    <string name="moveDeviceToGroup">移动设备到当前房间</string>
    <string name="createFamily">我创建的房间</string>
    <string name="joinFamily">我加入的房间</string>
    <string name="removeDeviceFamily">移除设备</string>
    <string name="deviceSetting">设备设置</string>
    <string name="deleteDevice">删除设备</string>
    <string name="deviceName">设备名称：</string>
    <string name="resourceName">资源名称：</string>
    <string name="deviceUpdate">设备升级</string>
    <string name="modifyDeviceName">修改设备名称</string>
    <string name="dataIsNull">数据为空</string>
    <string name="rightNowUpdate">立即升级</string>
    <string name="currentVersion">当前版本</string>
    <string name="updateVersion">升级版本</string>
    <string name="updateContent">更新内容</string>
    <string name="logout">退出登录</string>
    <string name="deviceListType">设备列表类型</string>
    <string name="remoteDeviceListType">服务端拉取</string>
    <string name="localDeviceListTypeByFamily">本地拉取家庭下所有设备</string>
    <string name="localDeviceListTypeByRoom">本地拉取房间下所有设备</string>
    <string name="localDeviceListTypeByRoomLimit">本地分页拉取房间下设备</string>
    <string name="operateSuccess">操作成功</string>
    <string name="groupInfo">房间详情</string>
    <string name="groupName">房间名称</string>
    <string name="familyMember">家庭成员</string>
    <string name="messageSwitch">消息开关</string>
    <string name="updateState">升级状态 : </string>
    <string name="updateSuccess">升级成功</string>
    <string name="updateFail">升级失败</string>
    <string name="deviceOffline">设备离线</string>
    <string name="accept">接受</string>
    <string name="refuse">拒绝</string>
    <string name="familyInvite">家庭邀请</string>

    <string name="xlistview_header_hint_normal">下拉重新扫描</string>
    <string name="xlistview_header_hint_ready">松开重新扫描</string>
    <string name="xlistview_header_hint_more">下拉加载更多...</string>
    <string name="xlistview_header_hint_loading">正在扫描，请耐心等待...</string>
    <string name="xlistview_header_last_time">最近更新</string>
    <string name="xlistview_footer_hint_normal">上拉加载更多...</string>
    <string name="xlistview_footer_hint_leave_message">（每7天最多记录100条消息）</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_no_more">没有更多了</string>
    <string name="no_more_leave_tip">最多记录100条消息，每条消息最多可保存7天</string>

    <string name="loading">加载中...</string>
    <string name="register_hint">注册说明：\n1.输入国家码（手机区号如86）和账号。\n2.点击获取验证码。\n3.输入验证码和密码，点击注册。</string>
    <string name="forget_pwd_hint">重置密码说明：\n1.输入国家码（手机区号如86）和账号。\n2.点击获取验证码。\n3.输入验证码和新密码，点击重置密码。</string>
    <string name="value_formate_error">数据格式不对，请校验</string>
    <string name="not_empty">不能为空</string>
    <string name="delete_device_hint">是否删除设备?</string>
    <string name="waiting_join">等待加入</string>
    <string name="refuse_join">拒绝加入</string>
    <string name="joined">已加入</string>
    <string name="expire">已过期</string>
    <string name="family_home_add_device_hint">只有主人才能添加设备</string>
    <string name="no_permission_operate_device">您无操作此设备的权限</string>
    <string name="message_messageListPage_ListStateNoMoreData">"没有更多内容了"</string>
    <string name="about">关于</string>
    <string name="version_name">版本号</string>
    <string name="family_home_operate">只有房间主人才有权限操作</string>
    <string name="preview">预览</string>
    <string name="local_playback">本地回放</string>
    <string name="cloud_playback">云存储回放</string>
    <string name="message_messageListPage_Sunday">"周日"</string>
    <string name="message_messageListPage_Monday">"周一"</string>
    <string name="message_messageListPage_Tuesday">"周二"</string>
    <string name="message_messageListPage_Wednesday">"周三"</string>
    <string name="message_messageListPage_Thursday">"周四"</string>
    <string name="message_messageListPage_Friday">"周五"</string>
    <string name="message_messageListPage_Saturday">"周六"</string>
    <string name="message_messageListPage_Today">"今天"</string>
    <string name="common_select_date">Select date"</string>
    <string name="cloud_calender_today">T</string>
    <string name="yulan">T</string>
    <string name="debug">配置页面</string>
    <string name="ble_device_list">蓝牙设备列表</string>
    <string name="ble_device_control">设备控制</string>
    <string name="connect">连接</string>
    <string name="ble_device_base">设备基本操作</string>
    <string name="ble_device_otap">物模型控制</string>
    <string name="ble_device_ota">升级</string>
    <string name="ble_device_config_wifi">配网</string>
    <string name="ble_device_start_config_wifi">开始配网</string>
    <string name="ble_device_wifi_name_hint">请输入wifi名称</string>
    <string name="ble_device_wifi_pwd_hint">请输入wifi密码</string>
    <string name="ble_device_start_device_upgrade">开始设备升级</string>
    <string name="ble_device_start_sub_device_upgrade">开始设备子模块升级</string>
    <string name="ble_device_resourceIdentifier_sid_hint">请输入resourceId 的sid</string>
    <string name="ble_device_domain_sid_hint">请输入domain的sid</string>
    <string name="ble_device_identifier_sid_hint">请输入identifier的sid</string>
    <string name="ble_device_localindex_sid_hint">请输入localIndex</string>
    <string name="ble_device_prop">属性下发</string>
    <string name="ble_device_operate">操作下发</string>
    <string name="ble_device_prop_get">属性获取</string>
    <string name="ble_device_prop_value">请求值</string>
    <string name="automation_test">自动化测试</string>
    <string name="ble_device_get_wifilist">拉取wifi列表</string>
    <string name="ble_device_debug">蓝牙调试</string>
    <string name="skip_rope_debug">跳绳功能调试</string>


</resources>