<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:onClick="onClickUserInfo"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userInfo"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:onClick="onClickUserInfo"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/familyList"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:onClick="onClickUserInfo"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentFamily"
            />

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickLogout"
        android:text="@string/exitLogin"
        />

</LinearLayout>