<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/familyDetail" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/selectFamilyLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onClickModifyFamilyName"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/familyName" />

        <TextView
            android:id="@+id/familyNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/common2_icon_arrowgrey"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/roomLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectFamilyLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/roomNum" />

        <TextView
            android:id="@+id/roomNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/common2_icon_arrowgrey"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/memoryInfoLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memoryInfo"
            android:textColor="@color/black" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/memoryInfoRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memoryInfoLayout" />

    <Button
        android:id="@+id/exitFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/exitFamily"
        android:layout_marginEnd="20dp"
        android:onClick="onClickExitFamily"
        app:layout_constraintBottom_toBottomOf="parent" />


    <Button
        android:id="@+id/deleteFamilyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/inviteNum"
        android:layout_marginEnd="20dp"
        android:onClick="onClickInviteFamily"
        app:layout_constraintBottom_toTopOf="@+id/inviteFamilyBtn" />

    <Button
        android:id="@+id/inviteFamilyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/deleteFamily"
        android:layout_marginEnd="20dp"
        android:onClick="onClickDeleteFamily"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>