<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/ble_device_config_wifi" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/wifiNameEt"
            android:layout_width="match_parent"
            android:hint="@string/ble_device_wifi_name_hint"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/wifiPwdEt"
            android:layout_width="match_parent"
            android:hint="@string/ble_device_wifi_pwd_hint"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/ble_device_start_config_wifi"
                android:onClick="onClickStartConfigWifi"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/ble_device_get_wifilist"
                android:onClick="onClickGetWifiList"
                android:layout_height="wrap_content"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">


            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="拉取网络状态"
                android:onClick="onClickGetNetworkInfo"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="拉取绑定状态"
                android:onClick="onClickGetBindState"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="复制日志"
                android:onClick="onClickCopyLog"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/logTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </ScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>